syntax = "proto3";
package qaul.rpc.chat;


// Chat service RPC message container
message Chat {
    // message type
    oneof message {
        // request an overview over the last conversations
        ChatOverviewRequest overview_request = 1;
        // contains the overview list
        ChatOverviewList overview_list = 2;

        // request a specific conversation
        ChatConversationRequest conversation_request = 3;
        // list of a chat conversation
        ChatConversationList conversation_list = 4;

        // send a new chat message
        ChatMessageSend send = 5;
    }
}

// request for overview list of all conversations
// this request shall be sent continuously when the view is open
// 
// at the moment always the entire list is sent
message ChatOverviewRequest {
}

// overview list of conversations
// this can eighter be the entire list or the last updates
message ChatOverviewList {
    repeated ChatOverview overview_list = 1;
}

// a chat conversation overview item
message ChatOverview {
    // id of the user
    bytes conversation_id = 1;
    // last message index
    uint32 last_message_index = 2;
    // name of the conversation
    string name = 3;
    // time when last message was sent or received
    uint64 last_message_at = 4;
    // unread messages
    int32 unread = 5;
    // preview text of the last message
    bytes content = 6;
    // sender of the last message
    bytes last_message_sender_id = 7;
}

// request messages of a specific chat conversation
message ChatConversationRequest {
    bytes conversation_id = 1;
    // send only changes that are newer than the last received
    uint64 last_index = 2;
}

// list of chat messages of a specific conversation
message ChatConversationList {
    bytes conversation_id = 1;
    repeated ChatMessage message_list = 2;
}

// a single chat message
message ChatMessage {
    // message index
    uint32 index = 1;
    // id of the sending user
    bytes sender_id = 2;
    // message id
    bytes message_id = 3;
    // message status
    // 0 = nothing
    // 1 = sent
    // 2 = received
    int32 status = 4;
    // time when the message was sent
    uint64 sent_at = 5;
    // time when the message was received
    uint64 received_at = 6;
    // content of the message
    bytes content = 7;
}

// chat message content
message ChatMessageContent{
    oneof content{
        // chat content
        ChatContent chat_content = 1;
        // file sharing content
        FileShareContent file_content = 2;
    }
}

//chat content 
message ChatContent{
    //content
    string content = 1;
}

//file sharing content
message FileShareContent{
    //file history index in DB
    uint64 history_index = 1;
    //file identifier
    uint64 file_id = 2;
    //file name
    string file_name = 3;
    //file size
    uint32 file_size = 4;
    //file description
    string file_descr = 5; 
}


// send chat message
message ChatMessageSend {
    // conversation id to which this message is sent
    bytes conversation_id = 1;
    // content of the message
    string content = 2;
}
